--- a/PSTAT120C_HW5.html
+++ b/PSTAT120C_HW5.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="TJ Sipin" />
 
-<meta name="date" content="2022-09-08" />
+<meta name="date" content="2022-09-09" />
 
 <title>PSTAT 120C HW 4</title>
 
@@ -365,7 +365,7 @@ pre code {
 
 <h1 class="title toc-ignore">PSTAT 120C HW 4</h1>
 <h4 class="author">TJ Sipin</h4>
-<h4 class="date">2022-09-08</h4>
+<h4 class="date">2022-09-09</h4>
 
 </div>
 
@@ -570,10 +570,12 @@ symbols.;</p>
 <p><span class="math inline">\(H_0: p = 0.50,\)</span> where <span class="math inline">\(p = P(X &gt; Y)\)</span>, or it is equally likely
 for <span class="math inline">\(X\)</span> to be greater than <span class="math inline">\(Y\)</span> as it is for <span class="math inline">\(Y\)</span> to be greater than <span class="math inline">\(X\)</span>.</p></li>
 <li><p>Calculate a test statistic <span class="math inline">\(M\)</span>;</p>
-<p>$M = $ # of positive differences where <span class="math inline">\(D_i = X_i - Y_i\)</span>.</p>
+<p>$M = $ # of positive differences where <span class="math inline">\(D_i = X_i - Y_i\)</span>.</p></li>
+</ul>
 <p><span class="math display">\[
 M = 6
-\]</span></p></li>
+\]</span></p>
+<ul>
 <li><p>Calculate the relevant binomial probability; <span class="math display">\[
 \begin{align}
 P(M \ge 6) &amp;= {7 \choose 6} 0.5 ^6 0.5 ^1 + {7 \choose 7} 0.5^7 0.5
@@ -601,23 +603,23 @@ assessing whether there is a difference between the population
 distribution <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span>.</li>
 </ol>
 <ul>
-<li><p>Calculate a test statistic <span class="math inline">\(T\)</span>;</p>
+<li>Calculate a test statistic <span class="math inline">\(T\)</span>;</li>
+</ul>
 <p><span class="math display">\[
 \begin{align}
 T^+ &amp;= 1.2 + 1.2 + 7 + 1.2 + 1.2 + 6 = 17.8 \\
 T^- &amp;= 1.2 \\
 T &amp;= \min(17.8, 1.2) = 1.2
 \end{align}
-\]</span></p></li>
-</ul>
+\]</span></p>
 <p>It could also be that</p>
 <p><span class="math display">\[
-  \begin{align}
-    T^+ &amp;= 3 + 3 + 7 + 3 + 3 + 6 = 25\\
-    T^- &amp;= 3 \\
-    T &amp;= \min(17.8, 3) = 3
-  \end{align}
-  \]</span></p>
+\begin{align}
+T^+ &amp;= 3 + 3 + 7 + 3 + 3 + 6 = 25\\
+T^- &amp;= 3 \\
+T &amp;= \min(17.8, 3) = 3
+\end{align}
+\]</span></p>
 <ul>
 <li><p>Determine the appropriate critical value for <span class="math inline">\(\alpha = 0.05\)</span> (or as close as possible to
 0.05);</p>
@@ -698,13 +700,247 @@ two processes? Give the attained significance level.</li>
 </table>
 <ol style="list-style-type: lower-alpha">
 <li>Answer the question by using the <strong>Mann-Whitney U
-test</strong>. We rank</li>
+test</strong>.</li>
 </ol>
+<p>Doing this by hand would be slightly tedious, so instead we work in
+R. However, We use the following equation for our test statistic <span class="math inline">\(U\)</span>:</p>
+<p><span class="math display">\[
+\begin{align}
+U &amp;= n_1 n_2 + \frac{n_1(n_1 + 1)}{2} - W \\
+&amp;= 9(9) + \frac{9(10)}{2} - W \\
+&amp;= 81 + 45 - W
+\end{align}
+\]</span></p>
+<pre class="r"><code>proc_a &lt;- c(6.1, 9.2, 8.7, 8.9, 7.6,
+            7.1, 9.5, 8.3, 9.0)
+proc_b &lt;- c(9.1, 8.2, 8.6, 6.9, 7.5,
+            7.9, 8.3, 7.8, 8.9)
+total &lt;- c(proc_a, proc_b)
+sort(total)</code></pre>
+<pre><code>##  [1] 6.1 6.9 7.1 7.5 7.6 7.8 7.9 8.2 8.3 8.3 8.6 8.7 8.9 8.9 9.0 9.1 9.2 9.5</code></pre>
+<p>Using the <code>sort()</code> function, we find that <span class="math inline">\(W = 1 + 3 + 5 + 9.5 + 12 + 13.5 + 15 + 17 + 18 =
+94\)</span>, so <span class="math inline">\(U = 32\)</span>. Using Table
+8, Appendix 3 in the book, we find that <span class="math inline">\(U_0
+= 21.\)</span> Since <span class="math inline">\(U = 32 \not\leq U_0 =
+21,\)</span> we fail to reject the null using <span class="math inline">\(\alpha = 0.10\)</span>.</p>
+<pre class="r"><code>wilcox.test(proc_b, proc_a)</code></pre>
+<pre><code>## 
+##  Wilcoxon rank sum test with continuity correction
+## 
+## data:  proc_b and proc_a
+## W = 32, p-value = 0.4795
+## alternative hypothesis: true location shift is not equal to 0</code></pre>
+<p>This is in line with the <code>wilcox.test()</code> function. Our
+p-value is higher than <span class="math inline">\(0.10\)</span> at
+<span class="math inline">\(0.4795\)</span>, so we fail to reject the
+null. Thus, we conclude that there is not sufficient evidence to
+indicate no difference in locations of brightness measurements for the
+two processes.</p>
+<ol start="2" style="list-style-type: lower-alpha">
+<li>Answer the question by using the independent samples <span class="math inline">\(t-test\)</span>.</li>
+</ol>
+<p>We calculate the standard deviation <span class="math inline">\(S_p\)</span> for the independent sample t-test by
+using the formula:</p>
+<p><span class="math display">\[
+\begin{align}
+S_p &amp;= \sqrt{\frac{\sum (X_{1i} - \bar X_1)^2 + \sum (X_{2i} - \bar
+X_2)^2}{n_1 + n_2 - 2}} \\
+\end{align}
+\]</span></p>
+<pre class="r"><code>sse_a &lt;- 0
+for (i in proc_a) {
+  sse_a &lt;- sse_a + (i - mean(proc_a))^2
+}
+sse_b &lt;- 0
+for (i in proc_b) {
+  sse_b &lt;- sse_b + (i - mean(proc_b))^2
+}</code></pre>
+<p>We find that</p>
+<p><span class="math display">\[
+S_p = \sqrt{\frac{10.02 + 3.86}{9 + 9 - 2}} = 0.9313968.
+\]</span></p>
+<p>We calculate the value of the independent sample t-test by using the
+formula</p>
+<p><span class="math display">\[
+t = \frac{\bar X_1 - \bar X_2}{S_p} \sqrt{\frac{n_1 n_2}{n_1 + n_2}} =
+\frac{\bar X_1 - \bar X_2}{S_p\sqrt{\frac{1}{n_1} + \frac{1}{n_2}}} =
+0.304.
+\]</span></p>
+<p>At the <span class="math inline">\(0.10\)</span> significance level
+for this two-tailed t-test, our critical value is <span class="math inline">\(1.746\)</span> with 16 degrees of freedom. Since
+<span class="math inline">\(t = 0.304 &lt; t_0 = 1.746\)</span>, we fail
+to reject the null hypothesis. We can check this in R:</p>
+<pre class="r"><code>t.test(proc_a, proc_b)</code></pre>
+<pre><code>## 
+##  Welch Two Sample t-test
+## 
+## data:  proc_a and proc_b
+## t = 0.30368, df = 13.367, p-value = 0.7661
+## alternative hypothesis: true difference in means is not equal to 0
+## 95 percent confidence interval:
+##  -0.8125664  1.0792331
+## sample estimates:
+## mean of x mean of y 
+##  8.266667  8.133333</code></pre>
+<p>Since our p-value is 0.766, which is higher than 0.10, we fail to
+reject the null hypothesis that there is no difference in locations of
+brightness measurements for the two processes.</p>
+<ol start="3" style="list-style-type: lower-alpha">
+<li>Provide the null and alternative hypotheses for parts <em>a</em> and
+<em>b</em>, along with any assumptions made for each test.</li>
+</ol>
+<p><span class="math inline">\(H_0:\)</span> there is no difference in
+locations of brightness measurements for the two processes.</p>
+<p><span class="math inline">\(H_a:\)</span> there is a difference in
+locations of brightness measurements for the two processes.</p>
+<p>The assumptions made for Mann-Whitney U are that we need a continuous
+or ordianl outcome variable, one independent variable with two groups,
+data that are similar in shape across groups, random sampling,
+independence, and sufficient sample size.</p>
+<p>The assumptions made for the independent sample t-test are that the
+data must be moderately normal and that <span class="math inline">\(n_1\)</span> and <span class="math inline">\(n_2\)</span> must be equal (or nearly equal).</p>
+<ol start="3" style="list-style-type: decimal">
+<li>Consider the Friedman statistic</li>
+</ol>
+<p><span class="math display">\[
+F_r = \frac{12b}{k(k+1)}\displaystyle \sum_{i = 1}^k (\bar R_i - \bar
+R)^2.
+\]</span></p>
+<p>Square each term in the sum, and show that an alternative form of
+<span class="math inline">\(F_r\)</span> is</p>
+<p><span class="math display">\[
+F_r = \frac{12}{bk(k+1)}\displaystyle \sum_{i=1}^k R_i^2 - 3b(k+1).
+\]</span></p>
+<p><em>Hint:</em> Recall that <span class="math inline">\(\bar R_i =
+\frac{R_i}{b}\)</span> and <span class="math inline">\(\bar R = \frac{k
++ 1}{2}\)</span>, and note that <span class="math inline">\(\displaystyle\sum_{i=1}^k R_i =
+\frac{bk(k+1)}{2}\)</span>.</p>
+<p><span class="math display">\[
+\begin{align}
+F_r &amp;= \frac{12b}{k(k+1)}\displaystyle \sum_{i = 1}^k (\bar R_i -
+\bar R)^2 \\
+&amp;= \frac{12b}{k(k+1)}\displaystyle \sum_{i = 1}^k (\bar R_i^2 -2
+\bar R_i \bar R + \bar R^2) \\
+&amp;= \frac{12b}{k(k+1)}\left[\displaystyle \sum_{i = 1}^k
+\frac{R_i^2}{b^2} - 2\frac{(k+1)}{2}\displaystyle \sum_{i = 1}^k \bar
+R_i + \displaystyle \sum_{i = 1}^k \bar R^2 \right] \\
+&amp;= \frac{12b}{k(k+1)}\displaystyle \sum_{i = 1}^k R_i ^2 -
+\frac{12b}{k(k+1)}\frac{(k + 1)}{b} \frac{bk(k+1)}{2} +
+\frac{12b}{k(k+1)}\frac{k(k+1)(k+1)}{4} \\
+&amp;= \frac{12 \displaystyle\sum_{i=1}^k R_i^2}{bk(k+1)} - 6b(k+1) +
+3b(k+1) \\
+&amp;= \frac{12}{bk(k+1)}\displaystyle\sum_{i=1}^k R_i^2 - 3b(k+1)
+\end{align}
+\]</span></p>
+<ol start="4" style="list-style-type: decimal">
+<li>A quality control chart has been maintained for a measurable
+characteristic of items taken from a conveyor belt at a fixed point in a
+production line. The measurements obtained today, in order of time from
+top left to bottom right (68.2 the earliest recorded and 70.1 the
+latest), are as follows:</li>
+</ol>
+<p><span class="math display">\[
+\begin{matrix}
+68.2 &amp; 71.6 &amp; 69.3 &amp; 71.6 &amp; 70.4 &amp; 65.0 &amp; 63.6
+&amp; 64.7 \\
+65.3 &amp; 64.2 &amp; 67.6 &amp; 68.6 &amp; 66.8 &amp; 68.9 &amp; 66.8
+&amp; 70.1
+\end{matrix}
+\]</span> (a) Classify the measurements in this time series according to
+whether each is above or below the sample mean and determine, using the
+<strong>runs test</strong>, whether there are runs of high or low
+measurements, suggesting a lack of stability in the production
+process.</p>
+<p>The sample mean is 67.66875. This means that our sample can be
+represented as</p>
+<p><span class="math display">\[
+\begin{matrix}
+H &amp; H &amp; H &amp; H &amp; H &amp; L &amp; L &amp; L \\
+L &amp; L &amp; L &amp; H &amp; L &amp; H &amp; L &amp; H
+\end{matrix}
+\]</span></p>
+<p>Our test statistic <span class="math inline">\(R\)</span> is the
+number of runs, so <span class="math inline">\(R = 7\)</span>. <span class="math inline">\(n_1\)</span> is the number of high elements, so
+<span class="math inline">\(n_1 = 8\)</span> and <span class="math inline">\(n_2\)</span>, the number of low elements is also
+<span class="math inline">\(8\)</span>. There are <span class="math inline">\(Y_1 = 4\)</span> runs of highs and <span class="math inline">\(Y_2 = 3\)</span> runs of lows. The maximum
+possible number of runs <span class="math inline">\(m\)</span> is <span class="math inline">\(2n_1 = 16\)</span> since <span class="math inline">\(n_1 = n_2\)</span>. Getting as close to <span class="math inline">\(\alpha = 0.05\)</span> as possible without
+exceeding it, we find that our critical values are <span class="math inline">\(4\)</span> and <span class="math inline">\(13\)</span> since <span class="math inline">\(\mathbb P(R \leq 3) = 0.009\)</span> and <span class="math inline">\(\mathbb P(R \leq 13) = 0.991\)</span>. We would
+reject the hypothesis that the production process randomly produces high
+and low measurements if <span class="math inline">\(R \leq 3\)</span> or
+<span class="math inline">\(R \geq 14\)</span> at the <span class="math inline">\(\alpha = 0.018\)</span> significance level. Since
+<span class="math inline">\(R = 7\)</span>, we fail to reject the null
+hypothesis, so we conclude that there is not enough evidence to say that
+there is a lack of stability in the production process.</p>
+<ol start="2" style="list-style-type: lower-alpha">
+<li>Divide the time period into two equal parts and compare the means of
+each, using the <em>t-test</em>, with <span class="math inline">\(\alpha
+= 0.05\)</span>. Do the data provide evidence of a shift in the mean
+level of the quality characteristic? Explain.</li>
+</ol>
+<p>We divide the time period by splitting between the two rows. We call
+<span class="math inline">\(R_1\)</span> the first row and <span class="math inline">\(R_2\)</span> the second. So the means <span class="math inline">\(\bar R_1 = 68.05\)</span> and <span class="math inline">\(\bar R_2 = 67.2875\)</span>.</p>
+<p>We find <span class="math inline">\(S_p\)</span>:</p>
+<p><span class="math display">\[
+\begin{align}
+S_p &amp;= \sqrt{\frac{\sum (X_{1i} - \bar X_1)^2 + \sum (X_{2i} - \bar
+X_2)^2}{n_1 + n_2 - 2}} \\
+&amp;= 2.66
+\end{align}
+\]</span></p>
+<pre class="r"><code>R_1 &lt;- c(68.2, 71.6, 69.3, 71.6, 70.4, 65.0, 63.6, 64.7)
+R_2 &lt;- c(65.3, 64.2, 67.6, 68.6, 66.8, 68.9, 66.8, 70.1)
+sum_R_1 &lt;- 0
+sum_R_2 &lt;- 0
+for (i in R_1) {
+  sum_R_1 = sum_R_1 + (i - mean(R_1))^2
+}
+for (i in R_2) {
+  sum_R_2 = sum_R_2 + (i - mean(R_2))^2
+}
+S_p = sqrt((sum_R_1 + sum_R_2)/(8 + 8 - 2))</code></pre>
+<p>We find the test statistic <span class="math inline">\(t\)</span>:</p>
+<p><span class="math display">\[
+t = \frac{\bar X_1 - \bar X_2}{S_p} \sqrt{\frac{n_1 n_2}{n_1 + n_2}} =
+\frac{\bar X_1 - \bar X_2}{S_p\sqrt{\frac{1}{n_1} + \frac{1}{n_2}}} =
+\frac{0.7625}{2.658259\sqrt{\frac{2}{8}}} = 0.5736838.
+\]</span></p>
+<p>At the <span class="math inline">\(\alpha = 0.05\)</span>
+significance level, our critical value <span class="math inline">\(T_0 =
+2.145\)</span>, which is greater than our test statistic, so we fail to
+reject the null hypothesis, so there is a shift in the mean level of the
+quality characteristic.</p>
 <pre class="r"><code>knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, eval = T)
 
 library(dplyr)
 library(knitr)
-library(kableExtra)</code></pre>
+library(kableExtra)
+proc_a &lt;- c(6.1, 9.2, 8.7, 8.9, 7.6,
+            7.1, 9.5, 8.3, 9.0)
+proc_b &lt;- c(9.1, 8.2, 8.6, 6.9, 7.5,
+            7.9, 8.3, 7.8, 8.9)
+total &lt;- c(proc_a, proc_b)
+sort(total)
+wilcox.test(proc_b, proc_a)
+sse_a &lt;- 0
+for (i in proc_a) {
+  sse_a &lt;- sse_a + (i - mean(proc_a))^2
+}
+sse_b &lt;- 0
+for (i in proc_b) {
+  sse_b &lt;- sse_b + (i - mean(proc_b))^2
+}
+t.test(proc_a, proc_b)
+R_1 &lt;- c(68.2, 71.6, 69.3, 71.6, 70.4, 65.0, 63.6, 64.7)
+R_2 &lt;- c(65.3, 64.2, 67.6, 68.6, 66.8, 68.9, 66.8, 70.1)
+sum_R_1 &lt;- 0
+sum_R_2 &lt;- 0
+for (i in R_1) {
+  sum_R_1 = sum_R_1 + (i - mean(R_1))^2
+}
+for (i in R_2) {
+  sum_R_2 = sum_R_2 + (i - mean(R_2))^2
+}
+S_p = sqrt((sum_R_1 + sum_R_2)/(8 + 8 - 2))</code></pre>
 </div>
 
 
